--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
                         </button>
                     </li>
                     <li>
-                        <button class="btn btn-danger">
+                        <a href="/sign-up.html" class="btn btn-danger">
                             Sign Up
-                        </button>
+                        </a>
                     </li>
                 </ul>
             </div>
