--- a/pricing.html
+++ b/pricing.html
@@ -44,9 +44,9 @@
                         </button>
                     </li>
                     <li>
-                        <button class="btn btn-danger">
+                        <a href="/sign-up.html" class="btn btn-danger">
                             Sign Up
-                        </button>
+                        </a>
                     </li>
                 </ul>
             </div>
