--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         </button>
                     </li>
                     <li>
-                        <a href="/sign-up.html" class="btn btn-danger">
+                        <a href="#" class="btn btn-danger">
                             Sign Up
                         </a>
                     </li>
