--- a/forgot_password.html
+++ b/forgot_password.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Fxmaestro - Sign Up </title>
+    <title>Fxmaestro - Forgot password </title>
     <link rel="icon" type="image/x-icon" href="assets/img/logos/logo.png" />
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
@@ -24,7 +24,7 @@
 
 <body id="page-to">
     <!-- Navigation-->
-    <nav class="navbar bg-dark  navbar-expand-lg navbar-dark fixed-top" id="mainNav">
+    <nav class="navbar  navbar-expand-lg navbar-dark fixed-top" id="mainNav">
         <div class="container">
             <a class="navbar-brand js-scroll-trigger" href="/">
                 <img src="assets/img/logos/logo.png" alt="" style="width: 100%; height:100%;" /></a>
@@ -38,7 +38,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/">About Us</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/pricing.html">Pricing</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/">Contact</a></li>
-                    <li class="nav-items mb-2 mb-md-0  mr-2">
+                    <li class="nav-items mb-2 mb-md-0 mr-2">
                         <a href="./login.html" class="btn btn-outline-success px-3">
                             Login
                         </a>
@@ -63,7 +63,7 @@
                             <div class="col-md-9 py-5 text-white">
                                 <br>
                                 <div class="">
-                                    <p class="h2 font-weight-bold mb-5 ">
+                                    <p class="h2 font-weight-bold mb-4 ">
                                         Welcome to FXMastero
                                     </p>
                                 </div>
@@ -73,12 +73,12 @@
                 </div>
                 <div class="col-md-5">
                     <div class="flex-even py-5 bg-white">
-                        <div class="row py-md-5 justify-content-center">
+                        <div class="row  justify-content-center">
                             <div class="col-md-9 px-4 px-md-0">
                                 <div class=" text-dark">
                                     <div class="">
-                                        <p class="h2 text-center font-weight-bold mb-3">
-                                            Sign up for premium
+                                        <p class="h2 text-center font-weight-bold mb-4 text-danger">
+                                            Forgot Password
                                         </p>
 
                                         <form @submit.prevent="pushFree">
@@ -86,21 +86,15 @@
                                                 <label for="exampleInputEmail1">Email address</label>
                                                 <input @change="welcome" v-model="email" required type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
                                             </div>
-                                            <div class="form-group">
-                                                <label for="exampleInputPassword1">Phone Number</label>
-                                                <input @change="welcome" v-model="phone" required type="mobile" class="form-control" id="exampleInputPassword1" placeholder="Phone Number">
-                                            </div>
-                                            <div class="form-group">
-                                                <label for="exampleInputPassword1">Password</label>
-                                                <input @change="welcome" v-model="password" required type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-                                            </div>
+                                            <small>You'll receive an email to reset your password
+                                            </small>
 
-                                            <button data-toggle="modal" :disabled="disabled" data-target="#exampleModalCenterPremuim" type="submit" class="mt-4 btn btn-block btn-success">Sign Up</button>
+                                            <button data-toggle="modal" :disabled="disabled" data-target="#exampleModalCenterPremuim" type="submit" class="mt-4 btn btn-block btn-success">Send Email</button>
                                         </form>
                                         <p class="mt-3 text-center">
                                             <span class="text-danger">
-                                                <a class="text-danger" href="./forgot_password.html">
-                                                    Forgot password
+                                                <a class="text-danger" href="./sign-up.html">
+                                                    Sign Up
                                                 </a>
                                             </span>
                                             <span class="d-inline-block mx-2">||</span>
