--- a/index.html
+++ b/index.html
@@ -27,22 +27,22 @@
             <a class="navbar-brand js-scroll-trigger" href="/">
                 <img src="assets/img/logos/logo.png" alt="" style="width: 100%; height:100%;" /></a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                    Menu
-                    <i class="fas fa-bars ml-1"></i>
-                </button>
+                Menu
+                <i class="fas fa-bars ml-1"></i>
+            </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav text-uppercase ml-auto">
                     <li class="nav-item"><a class="nav-link js-scroll-trigger active" href="/">Home</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/">About Us</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/pricing.html">Pricing</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/">Contact</a></li>
-                    <li class="nav-items mr-2">
-                        <button class="btn btn-outline-success px-3">
+                    <li class="nav-items mb-2 mb-md-0  mr-2">
+                        <a href="./login.html" class="btn btn-outline-success px-3">
                             Login
-                        </button>
+                        </a>
                     </li>
                     <li>
-                        <a href="##" class="btn btn-danger">
+                        <a href="./sign-up.html" class="btn btn-danger">
                             Sign Up
                         </a>
                     </li>
@@ -76,7 +76,7 @@
             </div>
             <div class="row text-center" data-aos="fade-down">
                 <div class="col-md-3">
-                    <div class="card">
+                    <div class="card boxshadow">
                         <div class="card-body">
                             <div>
                                 <img src="./assets/img/robost_section/trend.svg" style="width: 3rem;" alt="">
@@ -87,7 +87,7 @@
                     </div>
                 </div>
                 <div class="col-md-3">
-                    <div class="card">
+                    <div class="card boxshadow">
                         <div class="card-body">
                             <div>
                                 <img src="./assets/img/robost_section/iconbook.svg" style="width: 3rem;" alt="">
@@ -98,7 +98,7 @@
                     </div>
                 </div>
                 <div class="col-md-3">
-                    <div class="card">
+                    <div class="card boxshadow">
                         <div class="card-body">
                             <div>
                                 <img src="./assets/img/robost_section/insight.png" style="width: 3rem;" alt="">
@@ -109,7 +109,7 @@
                     </div>
                 </div>
                 <div class="col-md-3">
-                    <div class="card">
+                    <div class="card boxshadow">
                         <div class="card-body">
                             <div>
                                 <img src="./assets/img/robost_section/analysis.svg" style="width: 3rem;" alt="">
@@ -138,7 +138,7 @@
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <div>
+                    <div class="boxshadow">
                         <img src="/assets/img/sections/trade-signals.jpg" class="w-100" alt="">
                     </div>
                 </div>
@@ -150,7 +150,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-6">
-                    <div>
+                    <div class="boxshadow">
                         <iframe width="463" height="315" src="https://www.youtube.com/embed/pibfiwCQ4fU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         <!-- <img src="/assets/img/sections/trade-signals.jpg" class="w-100" alt=""> -->
                     </div>
