--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Fxmaestro - Sign Up </title>
+    <title>Fxmaestro - Login</title>
     <link rel="icon" type="image/x-icon" href="assets/img/logos/logo.png" />
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
@@ -24,7 +24,7 @@
 
 <body id="page-to">
     <!-- Navigation-->
-    <nav class="navbar bg-dark  navbar-expand-lg navbar-dark fixed-top" id="mainNav">
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
         <div class="container">
             <a class="navbar-brand js-scroll-trigger" href="/">
                 <img src="assets/img/logos/logo.png" alt="" style="width: 100%; height:100%;" /></a>
@@ -38,13 +38,13 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/">About Us</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/pricing.html">Pricing</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/">Contact</a></li>
-                    <li class="nav-items mb-2 mb-md-0  mr-2">
-                        <a href="./login.html" class="btn btn-outline-success px-3">
+                    <li class="nav-items mb-2 mb-md-0 mr-2">
+                        <a href="./login.html" class="btn btn-outline-success active px-3">
                             Login
                         </a>
                     </li>
                     <li>
-                        <a href="./sign-up.html" class="btn btn-danger active">
+                        <a href="./sign-up.html" class="btn btn-danger">
                             Sign Up
                         </a>
                     </li>
@@ -53,18 +53,18 @@
         </div>
     </nav>
 
-    <section class="page-section  black1_bg text-white">
+    <section class="page-section black1_bg text-white" id="portfolio">
         <div class="black1_bg py-5 mt-4">
             <div class="row no-gutters justify-content-center align-content-end">
 
-                <div class="col-md-5 d-none bg-success" style="background-image:url('./assets/img/sections/register-image.jpg'); background-repeat: no-repeat; background-size: cover;">
+                <div class="d-none  col-md-5 bg-success" style="background-image:url('./assets/img/sections/register-image.jpg'); background-repeat: no-repeat; background-size: cover;">
                     <div class="flex-even  d-none d-md-block">
                         <div class="row py-5 justify-content-center">
                             <div class="col-md-9 py-5 text-white">
                                 <br>
                                 <div class="">
-                                    <p class="h2 font-weight-bold mb-5 ">
-                                        Welcome to FXMastero
+                                    <p class="h2 font-weight-bold mb-4 ">
+                                        <!-- Welcome to FXMastero -->
                                     </p>
                                 </div>
                             </div>
@@ -72,30 +72,25 @@
                     </div>
                 </div>
                 <div class="col-md-5">
-                    <div class="flex-even py-5 bg-white">
+                    <div class="flex-even py-5 py-md-0 boxshadow bg-white">
                         <div class="row py-md-5 justify-content-center">
-                            <div class="col-md-9 px-4 px-md-0">
-                                <div class=" text-dark">
-                                    <div class="">
-                                        <p class="h2 text-center font-weight-bold mb-3">
-                                            Sign up for premium
+                            <div class="col-md-10 ">
+                                <div class="text-dark">
+                                    <div class="px-4 px-md-0">
+                                        <p class="h2 text-center font-weight-bold mb-4">
+                                            Login
                                         </p>
-
                                         <form @submit.prevent="pushFree">
                                             <div class="form-group">
                                                 <label for="exampleInputEmail1">Email address</label>
                                                 <input @change="welcome" v-model="email" required type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
                                             </div>
                                             <div class="form-group">
-                                                <label for="exampleInputPassword1">Phone Number</label>
-                                                <input @change="welcome" v-model="phone" required type="mobile" class="form-control" id="exampleInputPassword1" placeholder="Phone Number">
-                                            </div>
-                                            <div class="form-group">
                                                 <label for="exampleInputPassword1">Password</label>
                                                 <input @change="welcome" v-model="password" required type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
                                             </div>
 
-                                            <button data-toggle="modal" :disabled="disabled" data-target="#exampleModalCenterPremuim" type="submit" class="mt-4 btn btn-block btn-success">Sign Up</button>
+                                            <button data-toggle="modal" :disabled="disabled" data-target="#exampleModalCenterPremuim" type="submit" class="mt-4 btn btn-block btn-success">Login</button>
                                         </form>
                                         <p class="mt-3 text-center">
                                             <span class="text-danger">
@@ -104,15 +99,14 @@
                                                 </a>
                                             </span>
                                             <span class="d-inline-block mx-2">||</span>
-                                            <span class="text-dark">Already have an account
-                                                <a class="text-success" href="./login.html">
-                                                    Login
+                                            <span class="text-dark">Don't have an account
+                                                <a class="text-success" href="./sign-up.html">
+                                                    Create
                                                 </a>
                                             </span>
                                         </p>
                                     </div>
                                 </div>
-
                             </div>
                         </div>
                     </div>
