--- a/pricing.html
+++ b/pricing.html
@@ -23,28 +23,28 @@
 </head>
 
 <body id="page-to">
-    <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
         <div class="container">
             <a class="navbar-brand js-scroll-trigger" href="/">
                 <img src="assets/img/logos/logo.png" alt="" style="width: 100%; height:100%;" /></a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                    Menu
-                    <i class="fas fa-bars ml-1"></i>
-                </button>
+                Menu
+                <i class="fas fa-bars ml-1"></i>
+            </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav text-uppercase ml-auto">
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/">Home</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/">About Us</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger active" href="/pricing.html">Pricing</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger active" href="/pricing.html">Pricing</a>
+                    </li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/">Contact</a></li>
-                    <li class="nav-items mr-2">
-                        <button class="btn btn-outline-success px-3">
+                    <li class="nav-items mb-2 mb-md-0 mr-2">
+                        <a href="./login.html" class="btn btn-outline-success px-3">
                             Login
-                        </button>
+                        </a>
                     </li>
                     <li>
-                        <a href="#" class="btn btn-danger">
+                        <a href="./sign-up.html" class="btn btn-danger">
                             Sign Up
                         </a>
                     </li>
@@ -58,8 +58,8 @@
 
         <div class="container">
             <div class="row">
-                <div class="col-md-12 py-4 my-5">
-                    <p class="h1 bold2 text-center">
+                <div class="col-md-12 py-4 my-3">
+                    <p class="h1 font-weight-bold text-center">
                         Our Pricing
                     </p>
                 </div>
@@ -128,8 +128,8 @@
                                 <div class="text-center  mt-auto">
                                     <router-link to="/registerpremium">
                                         <button class="btn btn-block btn-outline-success px-3">
-                                                    Select Plan
-                                                </button>
+                                            Select Plan
+                                        </button>
                                     </router-link>
                                 </div>
                             </div>
@@ -201,8 +201,8 @@
                                 <div class="text-center  mt-auto">
                                     <router-link to="/registerpremium">
                                         <button class="btn btn-block btn-outline-success px-3">
-                                                    Select Plan
-                                                </button>
+                                            Select Plan
+                                        </button>
                                     </router-link>
                                 </div>
                             </div>
