--- a/all_signals.html
+++ b/all_signals.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Fxmaestro - Login</title>
+    <title>Fxmaestro - All Signals </title>
     <link rel="icon" type="image/x-icon" href="assets/img/logos/logo.png" />
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
@@ -20,11 +20,19 @@
     <!-- <link rel="stylesheet" href="./css/pricing_input.css"> -->
     <!-- <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" /> -->
 
+    <style>
+        .third .nav-link.active {
+            background-color: transparent !important;
+            color: black;
+            border-bottom: 3px solid #037A14;
+        }
+    </style>
+
 </head>
 
 <body id="page-to">
     <!-- Navigation-->
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
+    <nav class="navbar  navbar-expand-lg navbar-dark fixed-top" id="mainNav">
         <div class="container">
             <a class="navbar-brand js-scroll-trigger" href="/">
                 <img src="assets/img/logos/logo.png" alt="" style="width: 100%; height:100%;" /></a>
@@ -33,18 +41,49 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav  ml-auto">
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/">Home</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/">About Us</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/pricing.html">Pricing</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/">Contact</a></li>
-                    <li class="nav-items mb-2 mb-md-0 mr-2">
-                        <a href="./login.html" class="btn btn-outline-success active px-3">
-                            Login
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="./premium.html">Home</a></li>
+
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Forex Tools
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="#">Correlation charts</a>
+                            <a class="dropdown-item" href="#">Heat maps</a>
+                            <a class="dropdown-item" href="#">Trend Meter</a>
+                            <a class="dropdown-item" href="#">Stock Scanner</a>
+                            <a class="dropdown-item" href="#">Market Sentiment</a>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link js-scroll-trigger" href="#">
+                            Market Trend Dynamics
                         </a>
                     </li>
-                    <li>
-                        <a href="./sign-up.html" class="btn btn-danger">
-                            Sign Up
+                    <li class="nav-item">
+                        <a class="nav-link js-scroll-trigger" href="#">
+                            Technical Analysis
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link js-scroll-trigger active" href="./all_signals.html">
+                            Trade Signals
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link js-scroll-trigger" href="#">
+                            Library
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link js-scroll-trigger" href="./trading_room.html">
+                            Trading Room
+                        </a>
+                    </li>
+
+                    <li class="nav-items mb-2 mb-md-0  mr-2">
+                        <a href="##" class="btn btn-success px-3">
+                            Profile
                         </a>
                     </li>
                 </ul>
@@ -52,73 +91,19 @@
         </div>
     </nav>
 
-    <section class="page-section black1_bg text-white" id="portfolio">
-        <div class="black1_bg py-5 mt-4">
-            <div class="row no-gutters justify-content-center align-content-end">
-
-                <div class="d-none  col-md-5 bg-success" style="background-image:url('./assets/img/sections/register-image.jpg'); background-repeat: no-repeat; background-size: cover;">
-                    <div class="flex-even  d-none d-md-block">
-                        <div class="row py-5 justify-content-center">
-                            <div class="col-md-9 py-5 text-white">
-                                <br>
-                                <div class="">
-                                    <p class="h2 font-weight-bold mb-4 ">
-                                        <!-- Welcome to FXMastero -->
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-5">
-                    <div class="flex-even py-5 py-md-0 boxshadow bg-white">
-                        <div class="row py-md-5 justify-content-center">
-                            <div class="col-md-10 ">
-                                <div class="text-dark">
-                                    <div class="px-4 px-md-0">
-                                        <p class="h2 text-center font-weight-bold mb-4">
-                                            Login
-                                        </p>
-                                        <form id="onlyForm">
-                                            <div class="form-group">
-                                                <label for="exampleInputEmail1">Email address</label>
-                                                <input @change="welcome" v-model="email" required type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-                                            </div>
-                                            <div class="form-group">
-                                                <label for="exampleInputPassword1">Password</label>
-                                                <input @change="welcome" v-model="password" required type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-                                            </div>
-
-                                            <button data-toggle="modal" :disabled="disabled" data-target="#exampleModalCenterPremuim" type="submit" class="mt-4 btn btn-block btn-success">Login</button>
-                                        </form>
-                                        <p class="mt-3 text-center">
-                                            <span class="text-danger">
-                                                <a class="text-danger" href="./forgot_password.html">
-                                                    Forgot password
-                                                </a>
-                                            </span>
-                                            <span class="d-inline-block mx-2">||</span>
-                                            <span class="text-dark">Don't have an account
-                                                <a class="text-success" href="./sign-up.html">
-                                                    Create
-                                                </a>
-                                            </span>
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+    <section class="page-section  black2_bg text-white">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 py-4 my-3">
+                    <p class="h1 font-weight-bold text-center">
+                        Trade Signals
+                    </p>
                 </div>
             </div>
         </div>
+        <div class="my-5 py-5">
 
-
-
-
-
-
-
+        </div>
     </section>
 
     <!-- Footer-->
@@ -187,12 +172,6 @@
             duration: 400
         });
     </script> -->
-    <script>
-        document.getElementById('onlyForm').addEventListener('submit', (e) => {
-            e.preventDefault();
-            window.location.href = "/free_dashboard.html";
-        })
-    </script>
 </body>
 
 </html>
