--- a/index.html
+++ b/index.html
@@ -26,12 +26,11 @@
         <div class="container">
             <a class="navbar-brand js-scroll-trigger" href="/">
                 <img src="assets/img/logos/logo.png" alt="" style="width: 100%; height:100%;" /></a>
-            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                Menu
+            <button class="navbar-toggler bg-transparent navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="fas fa-bars ml-1"></i>
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="navbar-nav text-uppercase ml-auto">
+                <ul class="navbar-nav ml-auto">
                     <li class="nav-item"><a class="nav-link js-scroll-trigger active" href="/">Home</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/">About Us</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/pricing.html">Pricing</a></li>
@@ -241,12 +240,13 @@
                 </div>
                 <div class="col-md-3 text-left text-white mt-5">
                     <p class="h5 ">
-                        Quick Menu
+                        Quick Links
                     </p>
                     <a href="/" class="d-block">Home </a>
                     <a href="#" class="d-block">Faq</a>
                     <a href="#" class="d-block">Our Courses</a>
                     <a href="#" class="d-block">Events</a>
+                    <a href="./disclaimer.html" class="d-block">Disclaimer</a>
                 </div>
                 <div class="col-md-3 text-left text-white mt-5">
                     <p class="h5 ">
