--- a/free_dashboard.html
+++ b/free_dashboard.html
@@ -40,7 +40,7 @@
                 <i class="fas fa-bars ml-1"></i>
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="navbar-nav  ml-auto">
+                <ul class="navbar-nav m-auto">
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/">Home</a></li>
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="#">
@@ -67,19 +67,30 @@
                             Market Sentiment
                         </a>
                     </li>
+                    
+                </ul>
+
+               
+            </div>
+             <ul class="mb-0 float-right d-inline-flex">
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="./premium.html">
                             Go Premium
                         </a>
                     </li>
 
-                    <li class="nav-items mb-2 mb-md-0  mr-2">
-                        <a href="##" class="btn btn-success px-3">
-                            Profile
+                   <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle  " href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            My Account
                         </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="#">Profile</a>
+                            <a class="dropdown-item" href="#">Billing & Invoices</a>
+                            <a class="dropdown-item" href="#">Support</a>
+                            <a class="dropdown-item" href="#">Log out</a>
+                        </div>
                     </li>
                 </ul>
-            </div>
         </div>
     </nav>
 
