Updated Styles and content

--- a/premium.html
+++ b/premium.html
@@ -152,9 +152,9 @@
                 <div class="row justify-content-between">
                     <div class="col-md-6 mb-3">
                         <div class="card border-0 boxshadow2">
-                            <div class="dropdown border-0 card-header py-3 px-3 show d-flex justify-content-between" style="background: rgba(12, 91, 23, 0.1);">
+                            <div class="dropdown border-0 card-header py-3 px-3 show d-flex justify-content-between" >
                                 <div data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
-                                    <span class="text-dark">
+                                    <span class="text-grey">
                                         Technical Analysis
                                     </span>
                                 </div>
@@ -173,9 +173,9 @@
                     <div class="col-md-6 mb-3">
                         <div class="boxshadow2">
                             <div class="card rounded-0 border-0">
-                                <div class=" dropdown card-header p-3 show d-flex justify-content-between" style="background: rgba(12, 91, 23, 0.1);">
+                                <div class=" dropdown card-header p-3 show d-flex justify-content-between" >
                                     <div data-toggle="collapse" href="#collapseExample1" role="button" aria-expanded="false" aria-controls="collapseExample">
-                                        <span class="text-dark">
+                                        <span class="text-grey">
                                             Fundamental Analysis
                                         </span>
                                     </div>
@@ -200,26 +200,26 @@
             <div class="container third">
                 <div class="card-deck">
                     <div class="col-md-8 p-0 card border-0  mb-4">
-                        <div class="card-header text-dark font-weight-bold" style="background: rgba(12, 91, 23, 0.1);">
+                        <div class="card-header text-grey font-weight-bold" >
                             Stock Updates
                         </div>
                         <div class="card-body maintainHeight">
                             <ul class="nav nav-pills mb-3 " id="pills-tab" role="tablist">
                                 <li class="nav-item">
-                                    <a class="nav-link text-dark active" id="pills-active-tab" data-toggle="pill" href="#pills-active" role="tab" aria-controls="pills-home" aria-selected="true">
+                                    <a class="nav-link text-grey active" id="pills-active-tab" data-toggle="pill" href="#pills-active" role="tab" aria-controls="pills-home" aria-selected="true">
                                         <span class="text-white">Active
                                         </span>
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-dark" id="pills-gainers-tab" data-toggle="pill" href="#pills-gainers" role="tab" aria-controls="pills-gainers" aria-selected="false">
+                                    <a class="nav-link text-grey" id="pills-gainers-tab" data-toggle="pill" href="#pills-gainers" role="tab" aria-controls="pills-gainers" aria-selected="false">
                                         <span class="text-white">
                                             Gainers
                                         </span>
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-dark" id="pills-contact-tab" data-toggle="pill" href="#pills-contact" role="tab" aria-controls="pills-contact" aria-selected="false">
+                                    <a class="nav-link text-grey" id="pills-contact-tab" data-toggle="pill" href="#pills-contact" role="tab" aria-controls="pills-contact" aria-selected="false">
                                         <span class="text-white">
                                             Contact
                                         </span>
@@ -376,7 +376,7 @@
                         </div>
                     </div>
                     <div class="col-md-4 p-0  card border-0 pb-0 mb-4">
-                        <div class="card-header  text-dark font-weight-bold" style="background: rgba(12, 91, 23, 0.1);">
+                        <div class="card-header  text-grey font-weight-bold" >
                             Central bank news
                         </div>
                         <div class="card-body mb-0 maintainHeight">
