--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top black1_bg" id="mainNav">
         <div class="container">
-            <a class="navbar-brand js-scroll-trigger" href="/">
+            <a class="navbar-brand js-scroll-trigger" href="./index.html">
                 <img src="assets/img/logos/logo.png" alt="" style="width: 100%; height:100%;" /></a>
             <button class="navbar-toggler bg-transparent navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="fas fa-bars ml-1"></i>
@@ -73,11 +73,11 @@
     <section class="page-section black2_bg" id="services">
         <div class="container">
             <div class="text-center text-white">
-                <p class="mb-4 h1 bold2 mb-4">Robust tools that optimize your trading.</p>
+                <p class="mb-4 h3 bold2 mb-5">Robust tools that optimize your trading</p>
             </div>
             <div class="row text-center" data-aos="fade-down">
                 <div class="col-md-3">
-                    <div class="card boxshadow">
+                    <div class="card boxshadow p-5">
                         <div class="card-body">
                             <div>
                                 <img src="./assets/img/robost_section/trend.svg" style="width: 3rem;" alt="">
@@ -88,7 +88,7 @@
                     </div>
                 </div>
                 <div class="col-md-3">
-                    <div class="card boxshadow">
+                    <div class="card boxshadow p-5">
                         <div class="card-body">
                             <div>
                                 <img src="./assets/img/robost_section/iconbook.svg" style="width: 3rem;" alt="">
@@ -99,7 +99,7 @@
                     </div>
                 </div>
                 <div class="col-md-3">
-                    <div class="card boxshadow">
+                    <div class="card boxshadow p-5">
                         <div class="card-body">
                             <div>
                                 <img src="./assets/img/robost_section/insight.png" style="width: 3rem;" alt="">
@@ -110,7 +110,8 @@
                     </div>
                 </div>
                 <div class="col-md-3">
-                    <div class="card boxshadow">
+                    <div class="card boxshadow p-5">
+
                         <div class="card-body">
                             <div>
                                 <img src="./assets/img/robost_section/analysis.svg" style="width: 3rem;" alt="">
@@ -134,7 +135,7 @@
                             Trade signals that enable you to be in control of your trades as the market conditions change
                         </p>
                         <br>
-                        <button class="btn btn-outline-success">
+                        <button class="btn btn-outline-success px-5">
                             View pricing
                         </button>
                     </div>
@@ -163,7 +164,7 @@
                             Actionable insights that assist you to trade effectively.
                         </p>
                         <br>
-                        <button class="btn btn-outline-success">
+                        <button class="btn btn-outline-success px-5">
                             View pricing
                         </button>
                     </div>
@@ -210,8 +211,8 @@
                             <a class="text-white" href="./pricing.html">
                                 <div class="pt-md-5">
                                     <div class="py-4 text-center">
-                                        <img src="./assets/img/iconleft.png" class=" w-10 text-center p-2" alt="">
-                                        <p class="h6 pb-3">View All Signals</p>
+                                        <p class="h6 pb-3 small">View All Signals</p>
+                                        <img src="./assets/img/iconleft.png" class=" w-10 text-center p-2 m-auto" alt="">
                                     </div>
                                 </div>
                             </a>
@@ -226,8 +227,8 @@
     <section class="page-section black2_bg text-white" id="portfolio">
         <div class="container">
             <div class="row align-items-center justify-content-center">
-                <div class="col-md-11">
-                    <div class=" text-center">
+                <div class="col-md-12">
+                    <div class=" text-center mb-2">
                         <p class="text-center h2 bold2">Testimonials</p>
                         <p>
                             Lorem ipsum dolor sit amet consectetur, adipisicing elit.
@@ -235,27 +236,26 @@
                     </div>
 
                     <div>
-                        <div class="row justify-content-around">
-                            <div class="col-md-5" data-aos="fade-right">
-                                <div class="card boxshadow bg-transparent">
+                        <div class="row justify-content-around testimonials pr-5 pl-5">
+                            <div class="col-md-6" data-aos="fade-right">
+                                <div class="card boxshadow p-4">
                                     <div class="card-body">
-                                        <p>
+                                        <p class="testimonial-content">
                                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae ducimus labore cum commodi nostrum hic similique at aliquam voluptatem.
                                         </p>
-                                        <p class="h6 my-0">Customer Name</p>
-                                        <p class="my-0">Position Company | Country</p>
+                                        <p class="h6 my-0 testimonial-name">Customer Name</p>
+                                        <p class="my-0 testimonial-title">Position Company | Country</p>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-5" data-aos="fade-left">
-                                <div class="card boxshadow bg-transparent">
+                            <div class="col-md-6" data-aos="fade-left">
+                                <div class="card boxshadow p-4">
                                     <div class="card-body">
-
-                                        <p>
+                                        <p class="testimonial-content">
                                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae ducimus labore cum commodi nostrum hic similique at aliquam voluptatem.
                                         </p>
-                                        <p class="h6 my-0">Customer Name</p>
-                                        <p class="my-0">Position Company | Country</p>
+                                        <p class="h6 my-0 testimonial-name">Customer Name</p>
+                                        <p class="my-0 testimonial-title">Position Company | Country</p>
                                     </div>
                                 </div>
                             </div>
