--- a/login.html
+++ b/login.html
@@ -24,31 +24,34 @@
 
 <body id="page-to">
     <!-- Navigation-->
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
+   <nav class="navbar navbar-expand-lg navbar-dark fixed-top black1_bg" id="mainNav">
         <div class="container">
-            <a class="navbar-brand js-scroll-trigger" href="/">
+            <a class="navbar-brand js-scroll-trigger" href="./index.html">
                 <img src="assets/img/logos/logo.png" alt="" style="width: 100%; height:100%;" /></a>
             <button class="navbar-toggler bg-transparent navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="fas fa-bars ml-1"></i>
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="navbar-nav  ml-auto">
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/">Home</a></li>
+                <ul class="navbar-nav m-auto">
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="./index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/">About Us</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/pricing.html">Pricing</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger active" href="/pricing.html">Pricing</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/">Contact</a></li>
-                    <li class="nav-items mb-2 mb-md-0 mr-2">
-                        <a href="./login.html" class="btn btn-outline-success active px-3">
+                    
+                </ul>
+            </div>
+            <ul class="mb-0 float-right d-inline-flex">
+                    <li class="nav-items mb-2 mb-md-0  mr-2">
+                        <a href="./login.html" class="btn btn-outline-success px-4">
                             Login
                         </a>
                     </li>
                     <li>
-                        <a href="./sign-up.html" class="btn btn-danger">
+                        <a href="./sign-up.html" class="btn btn-danger px-4">
                             Sign Up
                         </a>
                     </li>
                 </ul>
-            </div>
         </div>
     </nav>
 
