--- a/pricing.html
+++ b/pricing.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Fxmaestro </title>
+    <title>Pricing | Fxmaestros </title>
     <link rel="icon" type="image/x-icon" href="assets/img/logos/logo.png" />
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
@@ -85,37 +85,39 @@
 </head>
 
 <body id="page-to">
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top black1_bg" id="mainNav">
         <div class="container">
-            <a class="navbar-brand js-scroll-trigger" href="/">
+            <a class="navbar-brand js-scroll-trigger" href="./index.html">
                 <img src="assets/img/logos/logo.png" alt="" style="width: 100%; height:100%;" /></a>
             <button class="navbar-toggler bg-transparent navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="fas fa-bars ml-1"></i>
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/">Home</a></li>
+                <ul class="navbar-nav m-auto">
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="./index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/">About Us</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger active" href="/pricing.html">Pricing</a>
-                    </li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger active" href="/pricing.html">Pricing</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/">Contact</a></li>
-                    <li class="nav-items mb-2 mb-md-0 mr-2">
-                        <a href="./login.html" class="btn btn-outline-success px-3">
+                    
+                </ul>
+            </div>
+            <ul class="mb-0 float-right d-inline-flex">
+                    <li class="nav-items mb-2 mb-md-0  mr-2">
+                        <a href="./login.html" class="btn btn-outline-success px-4">
                             Login
                         </a>
                     </li>
                     <li>
-                        <a href="./sign-up.html" class="btn btn-danger">
+                        <a href="./sign-up.html" class="btn btn-danger px-4">
                             Sign Up
                         </a>
                     </li>
                 </ul>
-            </div>
         </div>
     </nav>
 
     <!-- Trade signals-->
-    <section class="page-section black2_bg text-white" id="portfolio">
+    <section class="page-section black2_bg text-white mt-5" id="portfolio">
         <div class="container">
             <div class="row">
                 <div class="col-md-12 py-4 my-3">
@@ -130,7 +132,7 @@
             <div class="row justify-content-center">
                 <div class="col-md-12 col-lg-10 col-xl-8">
 
-                    <div class="text-center mb-4">
+                    <div class="text-center mb-5">
                         <span class="text-white ml-md-5 pl-md-3">Monthly</span>
                         <label class="switch mx-2">
                             <input type="checkbox" checked id="swith">
@@ -187,7 +189,7 @@
                                     </div>
                                 </div>
                                 <div class="text-center  mt-auto">
-                                    <a href="./sign-up.html">
+                                    <a href="./free_dashboard.html">
                                         <button class="btn btn-block btn-outline-success px-3">
                                             Select Plan
                                         </button>
@@ -260,7 +262,7 @@
                                     <!-- </div> -->
                                 </div>
                                 <div class="text-center  mt-auto">
-                                    <a href="./sign-up.html" to="/registerpremium">
+                                    <a href="./premium.html" to="/registerpremium">
                                         <button class="btn btn-block btn-outline-success px-3">
                                             Select Plan
                                         </button>
