--- a/trading_room.html
+++ b/trading_room.html
@@ -27,13 +27,13 @@
     <!-- Navigation-->
     <nav class="navbar  navbar-expand-lg navbar-dark fixed-top" id="mainNav">
         <div class="container">
-            <a class="navbar-brand js-scroll-trigger" href="/">
+            <a class="navbar-brand js-scroll-trigger" href="./index.html">
                 <img src="assets/img/logos/logo.png" alt="" style="width: 100%; height:100%;" /></a>
             <button class="navbar-toggler bg-transparent navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="fas fa-bars ml-1"></i>
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="navbar-nav  ml-auto">
+                <ul class="navbar-nav  m-auto">
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="./premium.html">Home</a></li>
 
                     <li class="nav-item dropdown">
@@ -69,18 +69,25 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger active" href="#">
+                        <a class="nav-link js-scroll-trigger active" href="./trading_room.html">
                             Trading Room
-                        </a>
-                    </li>
-
-                    <li class="nav-items mb-2 mb-md-0  mr-2">
-                        <a href="##" class="btn btn-success px-3">
-                            Profile
                         </a>
                     </li>
                 </ul>
             </div>
+             <ul class="mb-0 float-right d-inline-flex">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle  " href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            My Account
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="#">Profile</a>
+                            <a class="dropdown-item" href="#">Billing & Invoices</a>
+                            <a class="dropdown-item" href="#">Support</a>
+                            <a class="dropdown-item" href="#">Log out</a>
+                        </div>
+                    </li>
+                </ul>
         </div>
     </nav>
 
