--- a/all_signals.html
+++ b/all_signals.html
@@ -342,7 +342,7 @@
                         <div class="row mb-3 justify-content-center">
                             <div class="col-md-11 px-4">
                                 <div data-toggle="modal" data-target="#exampleModalLong">
-                                    <img class="w-100 hover boxshadow2" src="./assets/img/chartboad2.jpg" alt="">
+                                    <img style="cursor: zoom-in;" class="w-100 hover boxshadow2" src="./assets/img/chartboad2.jpg" alt="">
                                 </div>
                             </div>
                         </div>
