--- a/all_signals.html
+++ b/all_signals.html
@@ -204,27 +204,33 @@
             <div class="card-deck justify-content-around mb-5">
                 <div class="card col-md-3  bg-transparent boxshadow p-3">
                     <div class="">
-                        <img @click="switchTechnical" data-toggle="modal" data-target="#exampleModalCenter" src="./assets/img/trade-signal.jpg" class="w-100 mb-2" alt="">
+                        <img onclick="createPopupWin('popup.html', 
+                            'popup', 1200, 650);" src="./assets/img/trade-signal.jpg" class="w-100 mb-2" alt="">
 
-                        <button @click="switchTechnical" class="btn mt-2 px-md-4   btn-success" data-toggle="modal" data-target="#exampleModalCenter">Expand<span class="d-none d-lg-inline ml-1">Signal</span>
+                        <button @click="switchTechnical" class="btn mt-2 px-md-4   btn-success" onclick="createPopupWin('popup.html', 
+                            'popup', 1200, 650);">Expand<span class="d-none d-lg-inline ml-1">Signal</span>
                         </button>
                     </div>
 
                 </div>
                 <div class="card col-md-3 bg-transparent boxshadow p-3">
                     <div class="">
-                        <img @click="switchTechnical" data-toggle="modal" data-target="#exampleModalCenter" src="./assets/img/Market-trend -dynamics.jpg" class="w-100 mb-2" alt="">
+                        <img onclick="createPopupWin('popup.html', 
+                            'popup', 1200, 650);" src="./assets/img/Market-trend -dynamics.jpg" class="w-100 mb-2" alt="">
 
-                        <button @click="switchTechnical" class="btn mt-2 px-md-4   btn-success" data-toggle="modal" data-target="#exampleModalCenter">Expand<span class="d-none d-lg-inline ml-1">Signal</span>
+                        <button @click="switchTechnical" class="btn mt-2 px-md-4   btn-success" onclick="createPopupWin('popup.html', 
+                            'popup', 1200, 650);">Expand<span class="d-none d-lg-inline ml-1">Signal</span>
                         </button>
                     </div>
 
                 </div>
                 <div class="card col-md-3 bg-transparent boxshadow p-3">
                     <div class="">
-                        <img @click="switchTechnical" data-toggle="modal" data-target="#exampleModalCenter" src="./assets/img/technical-analysis.jpg" class="w-100 mb-2" alt="">
+                        <img onclick="createPopupWin('popup.html', 
+                            'popup', 1200, 650);" src="./assets/img/technical-analysis.jpg" class="w-100 mb-2" alt="">
 
-                        <button @click="switchTechnical" class="btn mt-2 px-md-4   btn-success" data-toggle="modal" data-target="#exampleModalCenter">Expand<span class="d-none d-lg-inline ml-1">Signal</span>
+                        <button @click="switchTechnical" class="btn mt-2 px-md-4   btn-success" onclick="createPopupWin('popup.html', 
+                            'popup', 1200, 650);">Expand<span class="d-none d-lg-inline ml-1">Signal</span>
                         </button>
                     </div>
 
@@ -233,29 +239,33 @@
             <div class="card-deck justify-content-around mb-5">
                 <div class="card col-md-3  bg-transparent boxshadow p-3">
                     <div class="">
-                        <img @click="switchTechnical" data-toggle="modal" data-target="#exampleModalCenter" src="./assets/img/trade-signal.jpg" class="w-100 mb-2" alt="">
+                        <img onclick="createPopupWin('popup.html', 
+                            'popup', 1200, 650);" src="./assets/img/trade-signal.jpg" class="w-100 mb-2" alt="">
 
-                        <button @click="switchTechnical" class="btn mt-2 px-md-4   btn-success" data-toggle="modal" data-target="#exampleModalCenter">Expand<span
-                                class="ml-1 d-none d-lg-inline ml-1">Signal</span>
+                        <button @click="switchTechnical" class="btn mt-2 px-md-4   btn-success" onclick="createPopupWin('popup.html', 
+                            'popup', 1200, 650);">Expand<span class="ml-1 d-none d-lg-inline ml-1">Signal</span>
                         </button>
                     </div>
 
                 </div>
                 <div class="card col-md-3 bg-transparent boxshadow p-3">
                     <div class="">
-                        <img @click="switchTechnical" data-toggle="modal" data-target="#exampleModalCenter" src="./assets/img/Market-trend -dynamics.jpg" class="w-100 mb-2" alt="">
+                        <img onclick="createPopupWin('popup.html', 
+                            'popup', 1200, 650);" src="./assets/img/Market-trend -dynamics.jpg" class="w-100 mb-2" alt="">
 
-                        <button @click="switchTechnical" class="btn mt-2 px-md-4   btn-success" data-toggle="modal" data-target="#exampleModalCenter">Expand<span
-                                class="ml-1 d-none d-lg-inline ml-1">Signal</span>
+                        <button @click="switchTechnical" class="btn mt-2 px-md-4   btn-success" onclick="createPopupWin('popup.html', 
+                            'popup', 1200, 650);">Expand<span class="ml-1 d-none d-lg-inline ml-1">Signal</span>
                         </button>
                     </div>
 
                 </div>
                 <div class="card col-md-3 bg-transparent boxshadow p-3">
                     <div class="">
-                        <img @click="switchTechnical" data-toggle="modal" data-target="#exampleModalCenter" src="./assets/img/technical-analysis.jpg" class="w-100 mb-2" alt="">
+                        <img onclick="createPopupWin('popup.html', 
+                            'popup', 1200, 650);" src="./assets/img/technical-analysis.jpg" class="w-100 mb-2" alt="">
 
-                        <button @click="switchTechnical" class="btn mt-2 px-md-4   btn-success" data-toggle="modal" data-target="#exampleModalCenter">Expand<span class="d-none d-lg-inline ml-1">Signal</span>
+                        <button @click="switchTechnical" class="btn mt-2 px-md-4   btn-success" onclick="createPopupWin('popup.html', 
+                            'popup', 1200, 650);">Expand<span class="d-none d-lg-inline ml-1">Signal</span>
                         </button>
                     </div>
 
