--- a/premium.html
+++ b/premium.html
@@ -107,19 +107,28 @@
                 <div class="card-deck mb-5">
                     <div class="card  bg-transparent boxshadow p-3">
                         <div class="">
-                            <img @click="switchTechnical" data-toggle="modal" data-target="#exampleModalCenter" src="./assets/img/trade-signal.jpg" class="w-100 mb-2" alt="">
+                            <img onclick="createPopupWin('popup.html', 
+                            'popup', 1200, 650);" src="./assets/img/trade-signal.jpg" class="w-100 mb-2" alt="">
+                            <!-- <img @click="switchTechnical" data-toggle="modal" data-target="#exampleModalCenter" src="./assets/img/trade-signal.jpg" class="w-100 mb-2" alt=""> -->
 
-                            <button @click="switchTechnical" class="btn mt-2 px-md-4   btn-success" data-toggle="modal" data-target="#exampleModalCenter">Expand<span
+                            <button onclick="createPopupWin('popup.html', 
+                            'popup', 1200, 650);" class="btn mt-2 px-md-4 btn-success">Expand<span
                                     class=" ml-1 d-none d-lg-inline">Signal</span>
                             </button>
+                            <!-- <button class="btn mt-2 px-md-4   btn-success" data-toggle="modal" data-target="#exampleModalCenter">Expand<span
+                                    class=" ml-1 d-none d-lg-inline">Signal</span>
+                            </button> -->
+
                         </div>
 
                     </div>
                     <div class="card  bg-transparent boxshadow p-3">
                         <div class="">
-                            <img @click="switchTechnical" data-toggle="modal" data-target="#exampleModalCenter" src="./assets/img/Market-trend -dynamics.jpg" class="w-100 mb-2" alt="">
+                            <img onclick="createPopupWin('popup.html', 
+                            'popup', 1200, 650);" src="./assets/img/Market-trend -dynamics.jpg" class="w-100 mb-2" alt="">
 
-                            <button @click="switchTechnical" class="btn mt-2 px-md-4   btn-success" data-toggle="modal" data-target="#exampleModalCenter">Expand<span
+                            <button onclick="createPopupWin('popup.html', 
+                            'popup', 1200, 650);" class="btn mt-2 px-md-4   btn-success">Expand<span
                                     class="ml-1 d-none d-lg-inline">Signal</span>
                             </button>
                         </div>
@@ -127,9 +136,11 @@
                     </div>
                     <div class="card  bg-transparent boxshadow p-3">
                         <div class="">
-                            <img @click="switchTechnical" data-toggle="modal" data-target="#exampleModalCenter" src="./assets/img/technical-analysis.jpg" class="w-100 mb-2" alt="">
+                            <img onclick="createPopupWin('popup.html', 
+                            'popup', 1200, 650);" src="./assets/img/technical-analysis.jpg" class="w-100 mb-2" alt="">
 
-                            <button @click="switchTechnical" class="btn mt-2 px-md-4   btn-success" data-toggle="modal" data-target="#exampleModalCenter">Expand<span
+                            <button onclick="createPopupWin('popup.html', 
+                            'popup', 1200, 650);" class="btn mt-2 px-md-4   btn-success">Expand<span
                                     class="ml-1 d-none d-lg-inline">Signal</span>
                             </button>
                         </div>
